# cmake_templates

./: CMakeLists.txt
FirstProgramm/: CMakeLists.txt  HelloWorld.cc
common/cmake/includes/: warnings.cmake
common/cmake/modules/: FindGoogleTest.cmake  addNewLibraryTarget.cmake  checkIsGitRepo.cmake
firstLib/: CMakeLists.txt
firstLib/include/firstLib/: PublicClass.hpp
firstLib/src/: InternalClass.cc  InternalClass.hpp  PublicClass.cc
firstLib/test/: CMakeLists.txt  PublicClass_test.cc
